Kubernetes/ingress-nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ingress
  namespace: taleb
  annotations:
    # Annotations pour utiliser cert-manager et générer un certificat Let's Encrypt gratuit
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - calculatrice-taleb.duckdns.org
      secretName: front-ingress-tls
  rules:
    - host: calculatrice-taleb.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-front
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svc-api
                port:
                  number: 5000
